# dsp56300

./: .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  meson.build
.github/workflows/: ci.yml  update-rust-toolchain.yml
crates/asm/: Cargo.toml
crates/asm/src/: ast.rs  encode.rs  lib.rs  parser.rs  token.rs
crates/asm/tests/: asm.rs  cli.rs
crates/core/: Cargo.toml
crates/core/src/: decode.rs  encode.rs  lib.rs
crates/core/tests/: core_api.rs  decode.rs
crates/disasm/: Cargo.toml
crates/disasm/src/: lib.rs
crates/disasm/tests/: cli.rs  disasm.rs
crates/dsp56300/: Cargo.toml
crates/dsp56300/src/: lib.rs
crates/emu/: Cargo.toml
crates/emu-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/emu-ffi/examples/: quickstart.c
crates/emu-ffi/include/: dsp56300.h
crates/emu-ffi/src/: lib.rs
crates/emu/benches/: jit.rs
crates/emu/src/: core.rs  jit.rs  lib.rs
crates/emu/src/emit/: agu.rs  alu.rs  bitops.rs  control.rs  flags.rs  logical.rs  loops.rs  mem.rs  mod.rs  moves.rs  regs.rs
crates/emu/tests/data/: README.md  sixcomb.lod
crates/emu/tests/emu/: agu.rs  alu.rs  bitops.rs  control.rs  infra.rs  logical.rs  loops.rs  main.rs  moves.rs  sixcomb.rs
docs/: ARCHITECTURE-NOTES.md  LIMITATIONS.md
examples/: README.md  caltone.a56  pink.a56  sinetab.inc  sixcomb.a56  tdsg.a56
fuzz/: Cargo.toml  asm.dict  emu.dict  seed_corpus.py
fuzz/fuzz_targets/: asm.rs  disasm.rs  emu.rs
scripts/: dsp56300-run
