[package]
name = "dsp56300-asm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "DSP56300 assembler"
keywords = ["dsp56300", "motorola", "assembler", "dsp", "embedded"]
categories = ["emulators", "development-tools"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
dsp56300-core = { version = "0.1.0", path = "../core" }
logos = "0.16"
chumsky = "0.12"
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
dsp56300-disasm = { version = "0.1.0", path = "../disasm", default-features = false }
rayon = "1"

[[bin]]
name = "dsp56300-asm"
path = "src/bin/asm.rs"
required-features = ["cli"]

