[package]
name = "dsp56300-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "DSP56300 decoder and architecture definitions"
keywords = ["dsp56300", "motorola", "decoder", "dsp", "embedded"]
categories = ["emulators", "no-std"]
